--- a/app/src/main/res/layout/viewpager_rating_study.xml
+++ b/app/src/main/res/layout/viewpager_rating_study.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/viewPager_ratingStudy_layout"
     android:layout_width="370dp"
-    android:layout_height="127dp"
+    android:layout_height="130dp"
     android:layout_gravity="center_horizontal">
 
     <TextView
@@ -23,113 +24,114 @@
         android:id="@+id/viewPager_study_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
         android:src="@drawable/study_score"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/viewPager_study_textView"
         app:layout_constraintTop_toBottomOf="@+id/viewPager_study_textView" />
 
     <TextView
         android:id="@+id/viewPager_wifi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
         android:text="와이파이"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_wifi"
+        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_wifi"
         app:layout_constraintStart_toEndOf="@+id/viewPager_study_image"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_study_textView" />
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_wifi" />
 
     <RatingBar
         android:id="@+id/viewPager_rating_wifi"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginStart="150dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_wifi"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_study_textView" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_study_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_study_image"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/viewPager_plug"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="16dp"
         android:text="콘센트"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_plug"
+        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_plug"
         app:layout_constraintStart_toEndOf="@+id/viewPager_study_image"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_wifi" />
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_plug" />
 
     <RatingBar
         android:id="@+id/viewPager_rating_plug"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="19dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_plug"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_rating_wifi" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_study_image"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager_rating_wifi"
+        app:layout_constraintStart_toStartOf="@+id/viewPager_rating_wifi"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_study_image"
+        app:layout_constraintVertical_bias="0.7" />
 
     <TextView
         android:id="@+id/viewPager_quiet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="15dp"
         android:text="조용함"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_quiet"
+        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_quiet"
         app:layout_constraintStart_toEndOf="@+id/viewPager_rating_wifi"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_study_textView" />
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_quiet" />
 
     <RatingBar
         android:id="@+id/viewPager_rating_quiet"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginEnd="15dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_quiet"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_study_textView" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_wifi"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_wifi" />
 
     <TextView
         android:id="@+id/viewPager_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
         android:text="조명"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_light"
+        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_light"
         app:layout_constraintStart_toEndOf="@+id/viewPager_rating_plug"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_quiet" />
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_light" />
 
     <RatingBar
         android:id="@+id/viewPager_rating_light"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="19dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_light"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_rating_quiet" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_plug"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager_rating_quiet"
+        app:layout_constraintStart_toStartOf="@+id/viewPager_rating_quiet"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_plug" />
 </androidx.constraintlayout.widget.ConstraintLayout>
