--- a/app/src/main/res/layout/viewpager_rating_taste.xml
+++ b/app/src/main/res/layout/viewpager_rating_taste.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/viewPager_ratingTaste_layout"
     android:layout_width="370dp"
-    android:layout_height="127dp"
+    android:layout_height="130dp"
     android:layout_gravity="center_horizontal">
 
     <TextView
@@ -22,114 +23,113 @@
     <ImageView
         android:id="@+id/viewPager_taste_image"
         android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="70dp"
         android:src="@drawable/taste_score"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/viewPager_tasteTextView"
         app:layout_constraintTop_toBottomOf="@+id/viewPager_tasteTextView" />
 
     <TextView
         android:id="@+id/viewPager_sour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="10dp"
         android:text="산미"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_sour"
+        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_sour"
         app:layout_constraintStart_toEndOf="@+id/viewPager_taste_image"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_tasteTextView" />
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_sour" />
 
     <RatingBar
         android:id="@+id/viewPager_rating_sour"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="130dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_sour"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_tasteTextView" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_taste_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_taste_image"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/viewPager_acerbity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="14dp"
         android:text="쓴맛"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_taste_image"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_sour" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_acerbity"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager_sour"
+        app:layout_constraintStart_toStartOf="@+id/viewPager_sour"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_acerbity" />
 
     <RatingBar
         android:id="@+id/viewPager_rating_acerbity"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="18dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_acerbity"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_rating_sour" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_taste_image"
+        app:layout_constraintStart_toStartOf="@+id/viewPager_rating_sour"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_taste_image"
+        app:layout_constraintVertical_bias="0.7" />
 
     <TextView
         android:id="@+id/viewPager_dessert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="10dp"
         android:text="디저트"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_sour"
+        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_dessert"
         app:layout_constraintStart_toEndOf="@+id/viewPager_rating_sour"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_tasteTextView" />
+        app:layout_constraintTop_toTopOf="@+id/viewPager_sour" />
 
     <RatingBar
         android:id="@+id/viewPager_rating_dessert"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginEnd="15dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_dessert"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_tasteTextView" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_sour"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_sour" />
 
     <TextView
         android:id="@+id/viewPager_beverage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="14dp"
         android:text="기타음료"
         android:textColor="@color/black"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_acerbity"
+        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_beverage"
         app:layout_constraintStart_toEndOf="@+id/viewPager_rating_acerbity"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_dessert" />
+        app:layout_constraintTop_toTopOf="@+id/viewPager_acerbity" />
 
     <RatingBar
         android:id="@+id/viewPager_rating_beverage"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="18dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_beverage"
-        app:layout_constraintTop_toBottomOf="@+id/viewPager_rating_dessert" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_acerbity"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager_rating_dessert"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_acerbity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
