--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -77,7 +77,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="레벨 및 위치인증"
-                        android:textColor="#000000"
+                        android:textColor="@color/black"
                         android:textSize="15sp" />
 
                 </LinearLayout>
@@ -87,60 +87,78 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/reviewMore_image1"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/image_view_round"
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                 <ImageView
                     android:id="@+id/reviewMore_image2"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/image_view_round"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <ImageView
                     android:id="@+id/reviewMore_image3"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@drawable/image_view_round"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     tools:srcCompat="@tools:sample/avatars" />
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/review_comment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="리뷰 내용" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/review_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="20"
+                    android:text="리뷰 내용" />
+
                 <CheckBox
                     android:id="@+id/good_button"
-                    android:layout_width="30dp"
+                    android:layout_width="20dp"
                     android:layout_height="45dp"
-                    android:layout_gravity="left"
-                    android:button="@null"
-                    android:layout_marginLeft="330dp"
+                    android:layout_gravity="left|bottom"
                     android:layout_marginRight="10dp"
-                    android:background="@drawable/good_checkbox" />
+                    android:layout_weight="1"
+                    android:background="@drawable/good_checkbox"
+                    android:button="@null" />
 
                 <TextView
                     android:id="@+id/good_count_textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center|right"
+                    android:layout_marginRight="5dp"
+                    android:layout_gravity="center_horizontal|bottom|right"
                     android:text="0"
-                    android:textColor="#000000"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
                     android:textSize="20sp" />
             </LinearLayout>
 
