--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -34,7 +34,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="이름"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/reviewProfile_image"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -43,11 +43,11 @@
                 android:id="@+id/reviewModify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
                 android:layout_marginTop="14dp"
+                android:layout_marginRight="10dp"
                 android:clickable="true"
                 android:text="수정"
-                app:layout_constraintStart_toEndOf="@+id/reviewNickName"
+                app:layout_constraintEnd_toStartOf="@+id/reviewDelete"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -65,11 +65,11 @@
                 android:id="@+id/reviewDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="14dp"
+                android:layout_marginRight="20dp"
                 android:clickable="true"
                 android:text="삭제"
-                app:layout_constraintStart_toEndOf="@+id/reviewModify"
+                app:layout_constraintEnd_toStartOf="@+id/reviewImage"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -113,12 +113,13 @@
 
             <ImageView
                 android:id="@+id/reviewImage"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_margin="10dp"
+                android:background="@drawable/image_view_round"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                tools:srcCompat="@drawable/logo" />
 
             <CheckBox
                 android:id="@+id/good_button"
