카페 등록 작업 1

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -115,6 +115,9 @@
         <action
             android:id="@+id/cafe_registration_to_cafe_registration_tag"
             app:destination="@id/navigation_cafe_registration_tag" />
+        <action
+            android:id="@+id/cafe_registration_to_cafe_detail"
+            app:destination="@id/navigation_cafe_detail" />
     </fragment>
 
     <fragment
