--- a/app/src/main/res/layout/viewpager_rating_taste.xml
+++ b/app/src/main/res/layout/viewpager_rating_taste.xml
@@ -33,11 +33,11 @@
         android:id="@+id/viewPager_sour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         android:text="산미"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_sour"
-        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_sour"
         app:layout_constraintStart_toEndOf="@+id/viewPager_taste_image"
         app:layout_constraintTop_toTopOf="@+id/viewPager_rating_sour" />
 
@@ -46,13 +46,13 @@
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
+        android:layout_marginLeft="5dp"
         android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
         app:layout_constraintBottom_toBottomOf="@+id/viewPager_taste_image"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/viewPager_sour"
         app:layout_constraintTop_toTopOf="@+id/viewPager_taste_image"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -78,9 +78,37 @@
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
         app:layout_constraintBottom_toBottomOf="@+id/viewPager_taste_image"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager_rating_sour"
         app:layout_constraintStart_toStartOf="@+id/viewPager_rating_sour"
         app:layout_constraintTop_toTopOf="@+id/viewPager_taste_image"
         app:layout_constraintVertical_bias="0.7" />
+
+    <TextView
+        android:id="@+id/viewPager_beverage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:text="기타음료"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_sour"
+        app:layout_constraintStart_toEndOf="@+id/viewPager_rating_sour"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_sour" />
+
+    <RatingBar
+        android:id="@+id/viewPager_rating_beverage"
+        style="@style/Widget.AppCompat.RatingBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:isIndicator="true"
+        android:layout_marginLeft="5dp"
+        android:numStars="5"
+        android:progressDrawable="@drawable/rating_custom"
+        android:stepSize="1"
+        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_sour"
+        app:layout_constraintStart_toEndOf="@+id/viewPager_beverage"
+        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_sour"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/viewPager_dessert"
@@ -89,39 +117,13 @@
         android:text="디저트"
         android:textColor="@color/black"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/viewPager_sour"
-        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_dessert"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_rating_sour"
-        app:layout_constraintTop_toTopOf="@+id/viewPager_sour" />
-
-    <RatingBar
-        android:id="@+id/viewPager_rating_dessert"
-        style="@style/Widget.AppCompat.RatingBar.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:isIndicator="true"
-        android:numStars="5"
-        android:progressDrawable="@drawable/rating_custom"
-        android:stepSize="1"
-        app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_sour"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/viewPager_rating_sour" />
-
-    <TextView
-        android:id="@+id/viewPager_beverage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="기타음료"
-        android:textColor="@color/black"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/viewPager_acerbity"
-        app:layout_constraintEnd_toStartOf="@+id/viewPager_rating_beverage"
-        app:layout_constraintStart_toEndOf="@+id/viewPager_rating_acerbity"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager_beverage"
+        app:layout_constraintStart_toStartOf="@+id/viewPager_beverage"
         app:layout_constraintTop_toTopOf="@+id/viewPager_acerbity" />
 
     <RatingBar
-        android:id="@+id/viewPager_rating_beverage"
+        android:id="@+id/viewPager_rating_dessert"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -130,6 +132,8 @@
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
         app:layout_constraintBottom_toBottomOf="@+id/viewPager_rating_acerbity"
-        app:layout_constraintEnd_toEndOf="@+id/viewPager_rating_dessert"
+        app:layout_constraintEnd_toEndOf="@+id/viewPager_rating_beverage"
+        app:layout_constraintStart_toStartOf="@+id/viewPager_rating_beverage"
         app:layout_constraintTop_toTopOf="@+id/viewPager_rating_acerbity" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
