Home에서 두번째 태그의 카페 목록 뷰페이저로 변경

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -296,7 +296,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.viewpager.widget.ViewPager
+                <com.example.wmc.HomeTag2ViewPager.HomeTag2ViewPager
                     android:id="@+id/second_viewPager"
                     android:layout_width="364dp"
                     android:layout_height="176dp"
