--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -91,6 +91,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
+                android:maxLines="3"
                 android:text="리뷰 내용"
                 android:textColor="@color/black"
                 android:textSize="15sp"
