--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -46,8 +46,8 @@
                         <TextView
                             android:id="@+id/nickName"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
+                            android:layout_height="32dp"
+                            android:layout_marginTop="10dp"
                             android:text="이름"
                             android:textColor="@color/black"
                             android:textSize="20sp" />
@@ -138,7 +138,8 @@
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_weight="20"
-                    android:text="리뷰 내용" />
+                    android:text="리뷰 내용"
+                    android:textColor="@color/black" />
 
                 <CheckBox
                     android:id="@+id/good_button"
