--- a/app/src/main/res/layout/item_home_taglist.xml
+++ b/app/src/main/res/layout/item_home_taglist.xml
@@ -71,8 +71,10 @@
                         android:id="@+id/cafeName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="7dp"
                         android:layout_marginStart="10dp"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginRight="5dp"
+                        android:singleLine="true"
                         android:text="카페 이름"
                         android:textColor="@color/black"
                         android:textSize="18sp"
@@ -83,6 +85,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:singleLine="true"
                         android:text="카페 주소"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
@@ -96,10 +99,11 @@
                             android:id="@+id/tag1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:layout_marginStart="10dp"
+                            android:layout_weight="1"
+                            android:singleLine="true"
                             android:text="#태그1"
-                            android:textColor="@color/black"
+                            android:textColor="@color/orange"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -108,8 +112,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:singleLine="true"
                             android:text="#태그2"
-                            android:textColor="@color/black"
+                            android:textColor="@color/brown"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -118,8 +123,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:singleLine="true"
                             android:text="#태그3  "
-                            android:textColor="@color/black"
+                            android:textColor="@color/brown"
                             android:textSize="16sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -139,7 +145,9 @@
                         android:id="@+id/bestReview_example"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:maxLines="3"
                         android:text="학교 근처라 그런지 공부하는 학생이 많다. 개강 준비하며 커피 한잔하기 좋은 카페! ..."
                         android:textColor="@color/black"
                         android:textSize="12sp" />
