페이지/아이템들 SingleLine , Maxlines 대대적 설정 // fragment_cafe_delete.xml fragment_cafe_detail.xml fragment_cafe_modify.xml fragment_cafe_registration.xml fragment_home.xml fragment_list_cafelist.xml fragment_list_search.xml fragment_mypage.xml fragment_review.xml fragment_review_cafelist.xml fragment_review_comment.xml fragment_review_tag.xml item_list_cafelist.xml item_list_recent_searches.xml item_more_review.xml item_review.xml

--- a/app/src/main/res/layout/fragment_cafe_delete.xml
+++ b/app/src/main/res/layout/fragment_cafe_delete.xml
@@ -87,11 +87,12 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/edge_top_back"
-                    android:enabled="false"
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:singleLine="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/requester"
                     app:layout_constraintTop_toTopOf="@+id/requester" />
@@ -117,10 +118,11 @@
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
-                    android:inputType="textPersonName"
                     android:enabled="false"
+                    android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:singleLine="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/delete_cafe_name"
                     app:layout_constraintTop_toTopOf="@+id/delete_cafe_name" />
@@ -146,10 +148,11 @@
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
-                    android:inputType="textPersonName"
                     android:enabled="false"
+                    android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:singleLine="true"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/delete_cafe_address"
