--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -42,11 +42,12 @@
             android:id="@+id/moreReview2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="54dp"
+            android:gravity="center"
+            android:maxLines="2"
+            android:paddingStart="54dp"
             android:text="카페명_example"
             android:textColor="@color/black"
-            android:layout_marginRight="54dp"
-            android:paddingStart="54dp"
-            android:gravity="center"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -137,6 +138,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
+                    android:singleLine="true"
                     android:text="#깔끔함"
                     android:textColor="@color/brown"
                     android:textSize="16sp"
@@ -151,6 +153,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
+                    android:singleLine="true"
                     android:text="#가성비"
                     android:textColor="@color/brown"
                     android:textSize="16sp"
@@ -164,6 +167,7 @@
                     android:id="@+id/moreReview5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:singleLine="true"
                     android:text="#스터디"
                     android:textColor="@color/orange"
                     android:textSize="16sp"
@@ -171,16 +175,18 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/moreReview3"
                     app:layout_constraintTop_toBottomOf="@+id/moreReview4"
-                    app:layout_constraintVertical_bias="0.3" />
+                    app:layout_constraintVertical_bias="0.32" />
 
                 <TextView
                     android:id="@+id/moreReview4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:singleLine="true"
                     android:text="경기 화성시 봉담읍 와우안길 18"
                     android:textColor="@color/black"
                     android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/favorite_checkbox"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/moreReview3"
                     app:layout_constraintTop_toBottomOf="@+id/moreReview3" />
