--- a/app/src/main/res/layout/fragment_review_tag.xml
+++ b/app/src/main/res/layout/fragment_review_tag.xml
@@ -169,6 +169,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/selected_tag_textview_v2"
                     android:gravity="center"
+                    android:singleLine="true"
                     android:textColor="@color/brown"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/addTag2"
@@ -182,6 +183,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/selected_tag_textview_v2"
                     android:gravity="center"
+                    android:singleLine="true"
                     android:textColor="@color/brown"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/brownFrame3"
@@ -196,6 +198,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/selected_tag_textview_v2"
                     android:gravity="center"
+                    android:singleLine="true"
                     android:textColor="@color/brown"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/brownFrame3"
