--- a/app/src/main/res/layout/fragment_cafe_modify.xml
+++ b/app/src/main/res/layout/fragment_cafe_modify.xml
@@ -228,6 +228,7 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:singleLine="true"
                     android:textColor="@color/gray"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -269,6 +270,7 @@
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:singleLine="true"
                     app:layout_constraintStart_toEndOf="@+id/cafe_openHours"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -298,6 +300,7 @@
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:singleLine="true"
                     app:layout_constraintStart_toEndOf="@+id/cafe_closeHours"
                     app:layout_constraintTop_toBottomOf="@+id/cafe_openHours_input" />
 
