--- a/app/src/main/res/layout/fragment_list_search.xml
+++ b/app/src/main/res/layout/fragment_list_search.xml
@@ -36,6 +36,7 @@
             android:inputType="textPersonName"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
