--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -122,6 +122,7 @@
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
+                    android:singleLine="true"
                     android:text=""
                     android:textColor="@color/brown"
                     android:textSize="14sp"
@@ -137,6 +138,7 @@
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
+                    android:singleLine="true"
                     android:text=""
                     android:textColor="@color/brown"
                     android:textSize="14sp"
@@ -152,6 +154,7 @@
                     android:layout_marginTop="16dp"
                     android:background="@drawable/selected_tag_textview"
                     android:gravity="center_horizontal|center_vertical"
+                    android:singleLine="true"
                     android:text=""
                     android:textColor="@color/brown"
                     android:textSize="14sp"
