--- a/app/src/main/res/layout/fragment_review_comment.xml
+++ b/app/src/main/res/layout/fragment_review_comment.xml
@@ -29,6 +29,7 @@
             android:id="@+id/write_review2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:text="카페 이름"
             android:textColor="#000000"
             android:textSize="24sp"
