--- a/app/src/main/res/layout/item_list_recent_searches.xml
+++ b/app/src/main/res/layout/item_list_recent_searches.xml
@@ -25,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:singleLine="true"
                 android:text="카페이름"
                 android:textColor="#3B2314"
                 android:textSize="20sp" />
@@ -34,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:singleLine="true"
                 android:text="카페주소"
                 android:textColor="@color/orange"
                 android:textSize="12sp" />
