--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:singleLine="true"
                 android:text="이름"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -106,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="2dp"
+                android:singleLine="true"
                 android:text="레벨 및 위치인증"
                 android:textColor="#000000"
                 android:textSize="15sp"
