--- a/app/src/main/res/layout/fragment_app_login.xml
+++ b/app/src/main/res/layout/fragment_app_login.xml
@@ -37,6 +37,7 @@
                 android:layout_marginTop="40dp"
                 android:hint="ID"
                 android:inputType="textPersonName"
+                android:singleLine="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/logo" />
@@ -48,6 +49,7 @@
                 android:layout_marginTop="20dp"
                 android:hint="Password"
                 android:inputType="textPersonName"
+                android:singleLine="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/login_id_input" />
