변경사항 다수. --> 더보기 확인 // fragment_cafe_registration.xml 힌트 생성, 입력타입 변경 (넘버 온리)
fragment_cafe_detail.xml 카페 디테일 페이지의 리뷰 리사이클러뷰 높이 변경

fragment_cafe_detail_more.xml 리뷰 더보기 페이지 푸터 높이, 제약조건 변경

CafeDetailFragment.java 카페디테일 정보 세팅에서 DB의 운영시간 변경

CafeRegistrationFragment.java
1.중복확인 버튼 클릭시 빈칸있는지 확인
2.NAME_TEST 변수 생성후 카페이름 중복검사 여부 확인 가능하게함
3.이를 통해 중복된 카페이름을 갖고 등록하는 것을 막게도 설정
4.태그 추가 버튼 클릭시 번들로 넘어가는 운영시간에 대한 정보 전달법 변경 !!560라인, 590라인 확인필요

CafeRegistrationTagFragment.java
NAME_TEST 변수 번들로 주고받기 코드 생성

--- a/app/src/main/res/layout/fragment_cafe_registration.xml
+++ b/app/src/main/res/layout/fragment_cafe_registration.xml
@@ -299,7 +299,8 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:inputType="textPersonName"
+                    android:hint="00"
+                    android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:singleLine="true"
@@ -327,7 +328,8 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:inputType="textPersonName"
+                    android:hint="00"
+                    android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:singleLine="true"
@@ -357,7 +359,8 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:inputType="textPersonName"
+                    android:hint="00"
+                    android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:singleLine="true"
@@ -386,7 +389,8 @@
                     android:background="@drawable/edge_top_back"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:inputType="textPersonName"
+                    android:hint="00"
+                    android:inputType="number"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:singleLine="true"
